display countdowns on web
